--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body>
+  <body style="padding:0;margin:0">
     <header></header>
     <main>
-    <div id="container" style="display:flex;width:100vw;height:100vh">
-    <iframe id="embedobject" src="https://www.geogebra.org/classic?lang=en" style="width:100vw;height:480"></iframe>
+    <div style="display:flex;width:100%;height:100vh;">
+    <iframe id="embedobject" src="https://www.geogebra.org/classic?lang=en" style="flex:1;padding:0;margin:0"></iframe>
+    </div>
     </main>
     <footer></footer>
   </body>
