--- a/index.html
+++ b/index.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="" style="height:100%">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name=viewport content="width=device-width,initial-scale=1">
+    <meta charset="utf-8"/>
+<!--    <script src="https://www.geogebra.org/apps/deployggb.js"></script>
+    <script>
+    var params = {"appName": "graphing", "width": 1920, "height": 703, "showToolBar": false, "showAlgebraInput": true, "showMenuBar": true };
+    var applet = new GGBApplet(params, true);
+    window.addEventListener("load", function() {
+        applet.inject('ggb-element');
+    });
+    var interval = setInterval(function(){
+            var ggb = document.getElementById("ggb-element")
+            ggb.style.height = "100%"
+            ggb.style.width = "100%"
+        },1000)
+    </script>-->
+    <script>
+    function something(){
+        console.log("initialized")
+        var iframe = document.getElementById("container")
+        console.log(iframe.contentWindow.document)
+    }
+    </script>
+    <title>Geogebra6</title>
   </head>
-  <body style="padding:0;margin:0">
-    <header></header>
-    <main>
-    <div style="display:flex;width:100%;height:100vh;">
-    <iframe id="embedobject" src="https://www.geogebra.org/classic?lang=en" style="flex:1;padding:0;margin:0"></iframe>
-    </div>
-    </main>
-    <footer></footer>
+  <body style="padding:0;margin:0;height:100%">
+<!--    <div id="ggb-element" style="width:100%;height:100%"></div>-->
+    <iframe id="container" scrolling="no"
+    src="https://www.geogebra.org/material/iframe/id/23587/width/1600/height/715/border/888888/rc/false/ai/false/sdz/false/smb/false/stb/false/stbh/true/ld/false/sri/false"
+    width="100%"
+    height="100%"
+    style="border:0px;" onload="something()" allowfullscreen>
+    </iframe>
   </body>
 </html>
