--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <meta charset="utf-8"/>
     <title>Geogebra6</title>
+    <style>
+        .container{
+            width:100%;
+            height:100%;
+        }
+    </style>
+    <script src="https://www.geogebra.org/apps/deployggb.js"></script>
+    <script>
+        var windowHeight = document.documentElement.clientHeight
+        var windowWidth =  document.documentElement.clientWidth
+        console.log(windowHeight,windowWidth)
+        var params = {"appName": "classic",scaleContainerClass:"container", "showToolBar": true, "showAlgebraInput": true, "showMenuBar": true };
+        var applet = new GGBApplet(params, true);
+        window.addEventListener("load", function() {
+            applet.inject('ggb-element');
+        });
+    </script>
   </head>
   <body style="padding:0;margin:0;height:100%">
-    <iframe id="container" scrolling="no"
-    src="https://www.geogebra.org/material/iframe/id/23587/width/1600/height/715/border/888888/rc/false/ai/false/sdz/false/smb/false/stb/false/stbh/true/ld/false/sri/false"
-    width="100%"
-    height="100%"
-    style="border:0px;" onload="something()" allowfullscreen>
-    </iframe>
+    <div class="container" id="ggb-element"></div>
   </body>
 </html>
