--- a/index.html
+++ b/index.html
@@ -12,17 +12,23 @@
     </style>
     <script src="https://www.geogebra.org/apps/deployggb.js"></script>
     <script>
-        var windowHeight = window.innerHeight
+        var windowHeight = window.innerHeight-8
         var windowWidth =  window.innerWidth
         console.log(windowHeight,windowWidth)
-        var params = {"appName": "classic",height:windowHeight,width:windowWidth, "showToolBar": true, "showAlgebraInput": true, "showMenuBar": true };
+        var params = {"appName": "classic",height:windowHeight,width:windowWidth, "showToolBar": true, "showAlgebraInput": true, "showMenuBar": true,showFullscreenButton:true };
         var applet = new GGBApplet(params, true);
         window.addEventListener("load", function() {
             applet.inject('ggb-element');
         });
+        var interval = setInterval(function(){
+            var target = document.querySelectorAll("textarea")[0]
+            if(target){
+                target.inputMode = "none"
+            }
+        },1000)
     </script>
   </head>
-  <body style="padding:0;margin:0;height:100%">
+  <body style="padding:0;margin:0;height:100%;display:flex;align-items:center">
     <div class="container" id="ggb-element"></div>
   </body>
 </html>
