--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://www.geogebra.org/apps/deployggb.js"></script>
     <script>
         window.addEventListener("load", function() {
-            var params = {"appName": "classic", width:document.body.width,height:document.body.height, "showToolBar": true, "showAlgebraInput": true, "showMenuBar": true,showFullscreenButton:true };
+            var params = {algebraInputPosition:"top","appName": "classic", width:document.body.width,height:document.body.height, "showToolBar": true, "showAlgebraInput": true, "showMenuBar": true,showFullscreenButton:true };
             var applet = new GGBApplet(params, true);
             applet.inject('ggb-element');
         });
