--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="" style="height:100%">
   <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="utf-8">
-    <meta name=viewport content="width=device-width,initial-scale=1">
     <title>Geogebra6</title>
-    <style>
-        .container{
-            width:100%;
-            height:100%;
-        }
-    </style>
     <script src="https://www.geogebra.org/apps/deployggb.js"></script>
     <script>
+        var params = {algebraInputPosition:"top","appName": "classic", width:800,height:600, "showToolBar": true, "showAlgebraInput": true, "showMenuBar": true,showFullscreenButton:true };
+        var applet = new GGBApplet(params, true);
         window.addEventListener("load", function() {
-            var params = {algebraInputPosition:"top","appName": "classic", width:document.body.width,height:document.body.height, "showToolBar": true, "showAlgebraInput": true, "showMenuBar": true,showFullscreenButton:true };
-            var applet = new GGBApplet(params, true);
             applet.inject('ggb-element');
         });
+        window.addEventListener("resize", function(){
+            applet.getAppletObject().setWidth(window.innerWidth)
+            applet.getAppletObject().setHeight(window.innerHeight)
+        })
         var interval = setInterval(function(){
             var target = document.querySelectorAll("textarea")[0]
             if(target){
@@ -25,7 +23,7 @@
         },1000)
     </script>
   </head>
-  <body style="padding:0;margin:0;height:100%;display:flex;align-items:center">
-    <div class="container" id="ggb-element"></div>
+  <body style="padding:0;margin:0;height:100%;">
+    <div class="container" style="width:100%;height:100%;" id="ggb-element"></div>
   </body>
 </html>
